unpackaged/main/default/objects/CL_Document__c/CL_Document__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CL_Generated Documents Names</description>
    <label>CL Document</label>
</CustomObject>