unpackaged/main/default/objects/CL_Document__c/fields/Doc1__c.field-meta.xml
<CustomField>
    <fullName>Doc1__c</fullName>
    <label>Doc1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>