unpackaged/main/default/objects/CL_Document__c/fields/Doc2__c.field-meta.xml
<CustomField>
    <fullName>Doc2__c</fullName>
    <inlineHelpText>TIL Document</inlineHelpText>
    <label>Doc2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>