unpackaged/main/default/objects/CL_Document__c/fields/Doc3__c.field-meta.xml
<CustomField>
    <fullName>Doc3__c</fullName>
    <label>Doc3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>