unpackaged/main/default/objects/CL_Document__c/fields/OrginaitionDocumentFolder__c.field-meta.xml
<CustomField>
    <fullName>OrginaitionDocumentFolder__c</fullName>
    <label>OrginaitionDocumentFolder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>