unpackaged/main/default/objects/CL_Document__c/fields/UploadedBOX__c.field-meta.xml
<CustomField>
    <fullName>UploadedBOX__c</fullName>
    <label>UploadedBOX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>